--- a/06-linear_regression.Rmd
+++ b/06-linear_regression.Rmd
@@ -16,11 +16,11 @@ Instead of looking at animal sleep hours, this time let's look at something more
 
 The typical dataset we will be working with has a structure similar to the one below:
 
-|dependent var.<br>($Y$) | predictor 1<br>($X_1$) | predictor 2<br>($X_2$)  | (other predictors) |
-|-----|:----|:-----|:------|
-|705  | 1.2 | 2.2  | (...) |
-|209  | 8.3 | -4.0 | (...) |
-|334  | 7.2 | -1.4 | (...) |
+|dependent var.<br>($Y$) | predictor 1<br>($X_1$) | predictor 2<br>($X_2$)  | other predictors<br> ($X_3$...$X_n$)|
+|:-----:|:----:|:-----:|:----:|
+| 705 | 1.2 | 2.2  | (...) |
+| 209 | 8.3 | -4.0 | (...) |
+| 334 | 7.2 | -1.4 | (...) |
 | ... | ... | ...  | (...) |
 
 - What the variables represent will depend on the problem you're studying and the question you're asking
@@ -62,7 +62,7 @@ Mathematically, a line is defined in terms of an **intercept** and **slope**.
 
 * **Slope** can be defined as the amount of change in `y` as `x` changes one unit. 
 $$ slope = \frac{\Delta y}{\Delta x}  $$
-* A rising slope will have a positive value whereas a descending slope will have a positive value. 
+* A rising slope will have a positive value whereas a descending slope will have a negative value. 
 * For example, the slope in the Response Duration Model above is -70. This means that for each unit of increase in frequency, we observe a 70ms decrease in reaction time. 
 
 A slope is not enough to define a line on a plot. There can be an infinite number of lines that have the same slope. We also need the **intercept**. Intercept determines the value predicted for y when x is 0. Consider the following graphs. 
@@ -76,19 +76,19 @@ The intercept for the data Response Duration Model above is 880ms. So, our Respo
 
 $$response\ duration = 880ms + (-70 \frac{ms}{freq}) * word\ frequecny   $$
 
-A good way to remember the intercept and the slope and a linear model is to remember the **taxi fares**. The taxi fares will usually start with a constant fee (a minimum fee). This is your intercept. It's the 0th kilometers and it already costs you 7 TLs. Then the cost for each kilometer is your slope. At the time of writing these notes, it is 6TLs. 
+A good way to remember the intercept and the slope and a linear model is to remember the **taxi fares**. The taxi fares will usually start with a constant fee (a minimum fee). This is your intercept. It's the 0th kilometers and it already costs you 30 TLs. Then the cost for each kilometer is your slope. At the time of writing these notes, it is 20TLs. 
 
 
 ```{r}
 library(ggplot2)
 
 distance = 1:20
-cost = 20+(14*distance)
+cost = 30+(20*distance)
 
 ggplot(data=NULL, aes(distance,cost)) +
   scale_x_continuous(breaks = seq(0, 20, by =1)) +
   scale_y_continuous(breaks = seq(0, 500, by = 20)) + 
-  geom_smooth(method="lm", formula =y~x + I(20+14*x))
+  geom_smooth(method="lm", formula =y~x + I(30+20*x))
 
 ```
 
@@ -111,7 +111,7 @@ taxi_model <- lm(cost ~ distance)
 # print the model coefficients
 taxi_model
 ```
-**Unbelievable!** The model estimated the intercept (start cost) as 20 and the slope (cost per km) as 14. Simple as that. Notice that the model estimated these coefficients simply from the data but nothing else. 
+**Unbelievable!** The model estimated the intercept (start cost) as 30 and the slope (cost per km) as 20. Simple as that. Notice that the model estimated these coefficients simply from the data but nothing else. 
 
 
 The model object that we stored in the variable `taxi_model` has a lot more information. Let us take a look at the results of our model. To do this, we'll take use the `glance()` function from the `broom` package. 
@@ -130,7 +130,7 @@ results <- glance(taxi_model) %>%
 results
 ```
 
-Without going into any detail yet, I can tell you that we got an excellent model. Our **R<sup>2</sup>** is 1, which is perfect and our p value is very small `1.51e-287` (This means that there are 286 zeroes after 0. and before 151. So, a very small number). When the p value is so small, we can conclude that the relation between distance and cost is **statistically significant** (i.e. not random).  
+Without going into any detail yet, I can tell you that we got an excellent model. Our **R<sup>2</sup>** is 1, which is perfect and our p value is very small `3.63e-285` (This means that there are 284 zeroes after 0. and before 363 So, a very small number). When the p value is so small, we can conclude that the relation between distance and cost is **statistically significant** (i.e. not random).  
 
 ## Data is messy
 In the taxi model above, we worked with a very simplistic and ideal dataset. We know that in theory that is what a tax fare should look like. However, İstanbul is a crowded city and there are lots of traffic jams and traffic is quite unpredictable as there are so many random variables. Since the taxi charges you not only for the distance but also the duration you wait at the lights, there is always going to be some random addition to the fare. Let us incorporate that randomness to our taxi cost data and rerun our model to see what it looks like. 
@@ -140,7 +140,7 @@ All we are going to do is to add some random values to our taxi prices. Let's ge
 
 ```{r}
 set.seed(42)
-hidden_cost <- rnorm(20, mean=7.5, sd=4.5)
+hidden_cost <- rnorm(20, mean=15, sd=5)
 total_cost <- cost + hidden_cost
 ```
 
@@ -176,15 +176,15 @@ better_taxi_model <- lm(total_cost~distance)
 
 better_taxi_model
 ```
-Notice that we got a new intercept and slope. It's kinda weird. We know that the taxi start fare is 20TL. However, our intercept is a lot higher (this will differ as each time you run your code as the traffic cost we calculated is random unless you set some seed number to generate the random values). This is quite off given our original intercept. 
+Notice that we got a new intercept and slope. It's kinda weird. We know that the taxi start fare is 30TL. However, our intercept is a lot higher (this will differ as each time you run your code as the traffic cost we calculated is random unless you set some seed number to generate the random values). This is quite off given our original intercept. 
 
-Notice that the slope is a little off too. It's not exactly 14 but it's not way off like the intercept. So, did our linear model do well? Before answering this question more formally, I'll draw your attention to one point. Our model predicts that your initial taxi fare will be a little higher at the beginning and it will sort of even out as your distance increases. Even though our model doesn't guess the intercept correctly, it still does a very decent job in modeling the real life taxi costs (or a simulation of it). Just add up the intercept and slope and that should give you around the minimum cost you'll pay for a taxi ride.
+Notice that the slope is a little off too. It's not exactly 20 but it's not way off like the intercept. So, did our linear model do well? Before answering this question more formally, I'll draw your attention to one point. Our model predicts that your initial taxi fare will be a little higher at the beginning and it will sort of even out as your distance increases. Even though our model doesn't guess the intercept correctly, it still does a very decent job in modeling the real life taxi costs (or a simulation of it). Just add up the intercept and slope and that should give you around the minimum cost you'll pay for a taxi ride.
 
 ```{r}
 coef(better_taxi_model)[1] + coef(better_taxi_model)[2]
 ```
 
-At this point, I want to remind you that taxi rides in İstanbul have a minimum of 70 TLs for short distance trips (2km or less). So, our model does pretty good for a real life scenario. 
+At this point, I want to remind you that taxi rides in İstanbul have a minimum of 100 TLs for short distance trips (2km or less). So, our model does pretty good for a real life scenario. 
 
 ## Simplified Frequency Data
 Let us use a simple frequency data. Go ahead and download the `log10ELP_frequency.csv` file from Moodle. This is the same data in Bodo Winter's ELP_frequency.csv file with an added column for log10 normalization. We will plot the data using a scatterplot with geom_point and also draw a regression line. 
