--- a/docs/main.tex
+++ b/docs/main.tex
@@ -746,11 +746,11 @@ Once you install a package, you need to load it before you can use its functions
 
 \begin{verbatim}
 ## -- Attaching core tidyverse packages ------------------------ tidyverse 2.0.0 --
-## v dplyr     1.1.2     v readr     2.1.4
+## v dplyr     1.1.3     v readr     2.1.4
 ## v forcats   1.0.0     v stringr   1.5.0
-## v ggplot2   3.4.2     v tibble    3.2.1
-## v lubridate 1.9.3     v tidyr     1.3.0
-## v purrr     1.0.1     
+## v ggplot2   3.4.3     v tibble    3.2.1
+## v lubridate 1.9.2     v tidyr     1.3.0
+## v purrr     1.0.2     
 ## -- Conflicts ------------------------------------------ tidyverse_conflicts() --
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()
@@ -3157,7 +3157,7 @@ One final useful function is the \texttt{filter()} function. It allows you to fi
 
 \chapter{Plotting}\label{plotting-1}
 
-(18 November, 2024, 11:13)
+(18 November, 2024, 14:24)
 
 \section{The basics of ggplot2}\label{the-basics-of-ggplot2}
 
@@ -4919,19 +4919,19 @@ Instead of looking at animal sleep hours, this time let's look at something more
 The typical dataset we will be working with has a structure similar to the one below:
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2174}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2174}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2609}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.3043}}@{}}
+  >{\centering\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2692}}
+  >{\centering\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2308}}
+  >{\centering\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2692}}
+  >{\centering\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2308}}@{}}
 \toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\raggedright
+\begin{minipage}[b]{\linewidth}\centering
 dependent var.(\(Y\))
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
 predictor 1(\(X_1\))
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
 predictor 2(\(X_2\))
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-(other predictors)
+\end{minipage} & \begin{minipage}[b]{\linewidth}\centering
+other predictors (\(X_3\)\ldots{}\(X_n\))
 \end{minipage} \\
 \midrule\noalign{}
 \endhead
@@ -5001,7 +5001,7 @@ Mathematically, a line is defined in terms of an \textbf{intercept} and \textbf{
   \textbf{Slope} can be defined as the amount of change in \texttt{y} as \texttt{x} changes one unit.
   \[ slope = \frac{\Delta y}{\Delta x}  \]
 \item
-  A rising slope will have a positive value whereas a descending slope will have a positive value.
+  A rising slope will have a positive value whereas a descending slope will have a negative value.
 \item
   For example, the slope in the Response Duration Model above is -70. This means that for each unit of increase in frequency, we observe a 70ms decrease in reaction time.
 \end{itemize}
@@ -5018,19 +5018,19 @@ The intercept for the data Response Duration Model above is 880ms. So, our Respo
 
 \[response\ duration = 880ms + (-70 \frac{ms}{freq}) * word\ frequecny   \]
 
-A good way to remember the intercept and the slope and a linear model is to remember the \textbf{taxi fares}. The taxi fares will usually start with a constant fee (a minimum fee). This is your intercept. It's the 0th kilometers and it already costs you 7 TLs. Then the cost for each kilometer is your slope. At the time of writing these notes, it is 6TLs.
+A good way to remember the intercept and the slope and a linear model is to remember the \textbf{taxi fares}. The taxi fares will usually start with a constant fee (a minimum fee). This is your intercept. It's the 0th kilometers and it already costs you 30 TLs. Then the cost for each kilometer is your slope. At the time of writing these notes, it is 20TLs.
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \FunctionTok{library}\NormalTok{(ggplot2)}
 
 \NormalTok{distance }\OtherTok{=} \DecValTok{1}\SpecialCharTok{:}\DecValTok{20}
-\NormalTok{cost }\OtherTok{=} \DecValTok{20}\SpecialCharTok{+}\NormalTok{(}\DecValTok{14}\SpecialCharTok{*}\NormalTok{distance)}
+\NormalTok{cost }\OtherTok{=} \DecValTok{30}\SpecialCharTok{+}\NormalTok{(}\DecValTok{20}\SpecialCharTok{*}\NormalTok{distance)}
 
 \FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data=}\ConstantTok{NULL}\NormalTok{, }\FunctionTok{aes}\NormalTok{(distance,cost)) }\SpecialCharTok{+}
   \FunctionTok{scale\_x\_continuous}\NormalTok{(}\AttributeTok{breaks =} \FunctionTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{20}\NormalTok{, }\AttributeTok{by =}\DecValTok{1}\NormalTok{)) }\SpecialCharTok{+}
   \FunctionTok{scale\_y\_continuous}\NormalTok{(}\AttributeTok{breaks =} \FunctionTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{500}\NormalTok{, }\AttributeTok{by =} \DecValTok{20}\NormalTok{)) }\SpecialCharTok{+} 
-  \FunctionTok{geom\_smooth}\NormalTok{(}\AttributeTok{method=}\StringTok{"lm"}\NormalTok{, }\AttributeTok{formula =}\NormalTok{y}\SpecialCharTok{\textasciitilde{}}\NormalTok{x }\SpecialCharTok{+} \FunctionTok{I}\NormalTok{(}\DecValTok{20}\SpecialCharTok{+}\DecValTok{14}\SpecialCharTok{*}\NormalTok{x))}
+  \FunctionTok{geom\_smooth}\NormalTok{(}\AttributeTok{method=}\StringTok{"lm"}\NormalTok{, }\AttributeTok{formula =}\NormalTok{y}\SpecialCharTok{\textasciitilde{}}\NormalTok{x }\SpecialCharTok{+} \FunctionTok{I}\NormalTok{(}\DecValTok{30}\SpecialCharTok{+}\DecValTok{20}\SpecialCharTok{*}\NormalTok{x))}
 \end{Highlighting}
 \end{Shaded}
 
@@ -5066,11 +5066,11 @@ For our taxi model, we will model cost as a function of duration. The following 
 \NormalTok{\#\# }
 \NormalTok{\#\# Coefficients:}
 \NormalTok{\#\# (Intercept)     distance  }
-\NormalTok{\#\#          20           14}
+\NormalTok{\#\#          30           20}
 \end{Highlighting}
 \end{Shaded}
 
-\textbf{Unbelievable!} The model estimated the intercept (start cost) as 20 and the slope (cost per km) as 14. Simple as that. Notice that the model estimated these coefficients simply from the data but nothing else.
+\textbf{Unbelievable!} The model estimated the intercept (start cost) as 30 and the slope (cost per km) as 20. Simple as that. Notice that the model estimated these coefficients simply from the data but nothing else.
 
 The model object that we stored in the variable \texttt{taxi\_model} has a lot more information. Let us take a look at the results of our model. To do this, we'll take use the \texttt{glance()} function from the \texttt{broom} package.
 
@@ -5093,7 +5093,7 @@ The model object that we stored in the variable \texttt{taxi\_model} has a lot m
 \NormalTok{\#\# \# A tibble: 1 x 12}
 \NormalTok{\#\#   r.squared adj.r.squared    sigma statistic   p.value    df logLik    AIC}
 \NormalTok{\#\#       \textless{}dbl\textgreater{}         \textless{}dbl\textgreater{}    \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{} \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}}
-\NormalTok{\#\# 1         1             1 2.58e{-}14   1.96e32 8.70e{-}281     1   598. {-}1191.}
+\NormalTok{\#\# 1         1             1 2.10e{-}14   6.00e32 3.63e{-}285     1   603. {-}1199.}
 \NormalTok{\#\# \# i 4 more variables: BIC \textless{}dbl\textgreater{}, deviance \textless{}dbl\textgreater{}, df.residual \textless{}int\textgreater{}, nobs \textless{}int\textgreater{}}
 \end{Highlighting}
 \end{Shaded}
@@ -5124,11 +5124,11 @@ There are a lot of details. For now, we'll focus on only two values \textbf{R2} 
 \NormalTok{\#\# \# A tibble: 1 x 2}
 \NormalTok{\#\#   r.squared   p.value}
 \NormalTok{\#\#       \textless{}dbl\textgreater{}     \textless{}dbl\textgreater{}}
-\NormalTok{\#\# 1         1 8.70e{-}281}
+\NormalTok{\#\# 1         1 3.63e{-}285}
 \end{Highlighting}
 \end{Shaded}
 
-Without going into any detail yet, I can tell you that we got an excellent model. Our \textbf{R2} is 1, which is perfect and our p value is very small \texttt{1.51e-287} (This means that there are 286 zeroes after 0. and before 151. So, a very small number). When the p value is so small, we can conclude that the relation between distance and cost is \textbf{statistically significant} (i.e.~not random).
+Without going into any detail yet, I can tell you that we got an excellent model. Our \textbf{R2} is 1, which is perfect and our p value is very small \texttt{3.63e-285} (This means that there are 284 zeroes after 0. and before 363 So, a very small number). When the p value is so small, we can conclude that the relation between distance and cost is \textbf{statistically significant} (i.e.~not random).
 
 \section{Data is messy}\label{data-is-messy}
 
@@ -5139,7 +5139,7 @@ All we are going to do is to add some random values to our taxi prices. Let's ge
 \begin{Shaded}
 \begin{Highlighting}[]
 \FunctionTok{set.seed}\NormalTok{(}\DecValTok{42}\NormalTok{)}
-\NormalTok{hidden\_cost }\OtherTok{\textless{}{-}} \FunctionTok{rnorm}\NormalTok{(}\DecValTok{20}\NormalTok{, }\AttributeTok{mean=}\FloatTok{7.5}\NormalTok{, }\AttributeTok{sd=}\FloatTok{4.5}\NormalTok{)}
+\NormalTok{hidden\_cost }\OtherTok{\textless{}{-}} \FunctionTok{rnorm}\NormalTok{(}\DecValTok{20}\NormalTok{, }\AttributeTok{mean=}\DecValTok{15}\NormalTok{, }\AttributeTok{sd=}\DecValTok{5}\NormalTok{)}
 \NormalTok{total\_cost }\OtherTok{\textless{}{-}}\NormalTok{ cost }\SpecialCharTok{+}\NormalTok{ hidden\_cost}
 \end{Highlighting}
 \end{Shaded}
@@ -5211,13 +5211,13 @@ OK, now it looks like we have some more realistic data. Let us rerun our linear 
 \NormalTok{\#\# }
 \NormalTok{\#\# Coefficients:}
 \NormalTok{\#\# (Intercept)     distance  }
-\NormalTok{\#\#       32.08        13.65}
+\NormalTok{\#\#       50.09        19.61}
 \end{Highlighting}
 \end{Shaded}
 
-Notice that we got a new intercept and slope. It's kinda weird. We know that the taxi start fare is 20TL. However, our intercept is a lot higher (this will differ as each time you run your code as the traffic cost we calculated is random unless you set some seed number to generate the random values). This is quite off given our original intercept.
+Notice that we got a new intercept and slope. It's kinda weird. We know that the taxi start fare is 30TL. However, our intercept is a lot higher (this will differ as each time you run your code as the traffic cost we calculated is random unless you set some seed number to generate the random values). This is quite off given our original intercept.
 
-Notice that the slope is a little off too. It's not exactly 14 but it's not way off like the intercept. So, did our linear model do well? Before answering this question more formally, I'll draw your attention to one point. Our model predicts that your initial taxi fare will be a little higher at the beginning and it will sort of even out as your distance increases. Even though our model doesn't guess the intercept correctly, it still does a very decent job in modeling the real life taxi costs (or a simulation of it). Just add up the intercept and slope and that should give you around the minimum cost you'll pay for a taxi ride.
+Notice that the slope is a little off too. It's not exactly 20 but it's not way off like the intercept. So, did our linear model do well? Before answering this question more formally, I'll draw your attention to one point. Our model predicts that your initial taxi fare will be a little higher at the beginning and it will sort of even out as your distance increases. Even though our model doesn't guess the intercept correctly, it still does a very decent job in modeling the real life taxi costs (or a simulation of it). Just add up the intercept and slope and that should give you around the minimum cost you'll pay for a taxi ride.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -5228,11 +5228,11 @@ Notice that the slope is a little off too. It's not exactly 14 but it's not way 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{\#\# (Intercept) }
-\NormalTok{\#\#    45.72571}
+\NormalTok{\#\#    69.69523}
 \end{Highlighting}
 \end{Shaded}
 
-At this point, I want to remind you that taxi rides in İstanbul have a minimum of 70 TLs for short distance trips (2km or less). So, our model does pretty good for a real life scenario.
+At this point, I want to remind you that taxi rides in İstanbul have a minimum of 100 TLs for short distance trips (2km or less). So, our model does pretty good for a real life scenario.
 
 \section{Simplified Frequency Data}\label{simplified-frequency-data}
 
